# Language

./: CMakeLists.txt
examples/: program.govor  res_lexer.txt  res_poliz.txt  res_syntax.txt
src/: main.cpp
src/vm/: VM.h  Value.h
